--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: face_detection_camera
 description: A Flutter package detect face on camera.
-version: 0.0.2
+version: 0.0.3
 homepage: https://github.com/vinhtruongtrong/face_detection_camera
 
 environment:
@@ -13,6 +13,11 @@ dependencies:
 
   camera: ^0.9.8+1
   google_mlkit_face_detection: ^0.3.0
+  path_provider: ^2.0.11
+
+flutter:
+  assets:
+    - assets/images/
 
 dev_dependencies:
   flutter_test:
